QSqlTableModel::orderByClause(): Quote the table name

This ensures correct handling of names with special characters.

Fixes: QTBUG-92584
Change-Id: I95c7c54d9c7ee00b221a55f3d07ef1ec3a3bd217
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit 21b3b54193b9d90ee377fdfa306e21d2fdfe2837)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>