src/sql/models/qsqltablemodel.cpp
@@ -1001,7 +1001,8 @@ QString QSqlTableModel::orderByClause() const
 
     //we can safely escape the field because it would have been obtained from the database
     //and have the correct case
-    QString field = d->tableName + QLatin1Char('.')
+    QString field = d->db.driver()->escapeIdentifier(d->tableName, QSqlDriver::TableName)
+            + QLatin1Char('.')
             + d->db.driver()->escapeIdentifier(f.name(), QSqlDriver::FieldName);
     field = d->sortOrder == Qt::AscendingOrder ? Sql::asc(field) : Sql::desc(field);
     return Sql::orderBy(field);
